<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.dzmitry_lakisau.hw06.MainActivity">

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/go_to_3"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_1"
        android:layout_alignEnd="@+id/button_1"
        android:layout_alignLeft="@+id/button_1"
        android:layout_alignRight="@+id/button_1"
        android:layout_alignStart="@+id/button_1"
        android:layout_marginBottom="14dp"
        android:text="@string/chekbox"/>


    <Button
        android:id="@+id/button_2"
        android:layout_above="@id/checkBox"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/go_to_2"
        />



</RelativeLayout>
